@@ -1,0 +1,23 @@
+typhon.arts
+=============
+
+This module contains functions to interact with ARTS.
+
+.. Submodules
+.. ----------
+
+typhon.arts.xml module
+----------------------------
+
+.. automodule:: typhon.arts.xml
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+.. Module contents
+.. ---------------
+.. 
+.. .. automodule:: typhon.legacy
+..    :members:
+..    :undoc-members:
+..   :show-inheritance:
