@@ -2,5 +2,6 @@
 
 __version__ = '0.0.4'
 
+from . import arts
 from . import files
 
