@@ -1,0 +1,5 @@
+# -*- coding: utf-8 -*-
+
+from . import xml
+
+__all__ = ['xml']
